# Laba_ii_5

./: .black  .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
src/: idz1.py  idz2.py  idz3.py  primer.py
tests/: test_idz1.py  test_idz2.py  test_idz3.py
