[tool.poetry]
name = "laba-5"
version = "0.1.0"
description = ""
authors = ["Evgeni <kkrutkov02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.isort]
include_trailing_comma = true
line_length = 79
lines_after_imports = 2

[tool.flake8]
exclude = [
    ".git",
    ".idea",
    "doc",
    "tests",
    ".gitignore"
]
max-line-length = 120
ignore = ["E203", "F841"]

[tool.black]
line-length = 120
exclude = """
.idea/
tests/
doc/